--- a/.golangci.yml
+++ b/.golangci.yml
@@ -17,8 +17,8 @@ linters-settings:
     tab-width: 2
 
 issues:
-  max-per-linter: 0
-  max-same: 0
+  max-issues-per-linter: 0
+  max-same-issues: 0
   exclude-use-default: false
   exclude:
     - "Line contains TODO/BUG/FIXME"
