--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,5 +18,14 @@ jobs:
         with:
           go-version: 1.14
 
+      - name: Restore Go Modules cache
+        id: go-mod-cache
+        uses: actions/cache@v1
+        with:
+          path: ~/go/pkg/mod/
+          key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-mod-
+
       - name: Lint
         run: docker run --rm -v $(pwd):/app -w /app golangci/golangci-lint:v1.24.0 golangci-lint run
