--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,15 @@ jobs:
         with:
           go-version: 1.14
 
+      - name: Restore Go Modules cache
+        id: go-mod-cache
+        uses: actions/cache@v1
+        with:
+          path: ~/go/pkg/mod/
+          key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-mod-
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v1
         with:
