--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,12 @@
 name: Test
 
-on: push
+on:
+  - push
+  - pull_request
 
 jobs:
-  run-tests:
-    name: Run tests
+  test:
+    name: Test
     runs-on: ubuntu-latest
 
     steps:
